tests/gen-derivation/inputvalidation/no-constructors/expected
1/1: Building ValidateInput (ValidateInput.idr)
Error: While processing right hand side of genVoid. Error during reflection: No constructors found for the type `Builtin.Void`

ValidateInput:12:11--12:20
 08 | 
 09 | --- Gen for type with no constructors ---
 10 | 
 11 | genVoid : Fuel -> Gen Void
 12 | genVoid = deriveGen
                ^^^^^^^^^

